turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:22: error: not found: value avanced
  avanced(20)
  ^